# norpl

./: .gitignore  Cargo.toml  LICENCE  Makefile  README.md  build.Dockerfile  build.rs  comment_style.yaml  dock.yaml  dpnd.txt
docs/: style.md
examples/: test1.txt  test2.txt  test4.txt  test_assignment_shadowing.txt  test_if_scope.txt  test_incr_val_at_index_and_list_append.txt  test_index_ranges.txt  test_str_contains.txt  test_string_indexing.txt  test_strings.txt
examples/docker_install/: env.lrl  installer.lrl
scripts/: docker_rbuild.sh  with_build_env.sh
src/: ast.rs  docker_get.lrl  eval.rs  lexer.rs  main.rs  parser.lalrpop  prototypes.rs  test.txt  test3.txt  test5.txt  test_closure.txt  test_process.txt  test_this_implementation.txt
src/builtins/: fns.rs  mod.rs  prototypes.rs
src/eval/: builtins.rs  import.rs  mod.rs  value.rs
tests/: immutable_lists.txt  immutable_objects.txt  print.txt  test.rs
tests/cli/: mod.rs
tests/stdout/: comments.test  mod.rs  strings.test
