[package]
authors = ["Sean Kelleher <ezanmoto@gmail.com>"]
categories = [
    "development-tools"
]
description = "A research programming language"
keywords = ["programming"]
license = "MIT"
name = "norpl"
readme = "README.md"
repository = "https://github.com/ezanmoto/norpl"
version = "0.1.0"

[build-dependencies]
lalrpop = "=0.19.5"

[dependencies]
lalrpop-util = "=0.19.5"

[dev-dependencies]
assert_cmd = "=1.0.1"
